Closed Bug 1286482 Opened 8 years ago Closed 8 years ago

SetUserTimeAndStartupIDForActivatedWindow tries to access nsWindow.mIsX11Display (cannot compile with MOZ_ENABLE_STARTUP_NOTIFICATION)

Categories

(Core :: Widget: Gtk, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox50 + fixed
firefox51 --- fixed

People

(Reporter: arai, Unassigned)

References

Details

(Keywords: regression)

Attachments

(1 file)

> static void
> SetUserTimeAndStartupIDForActivatedWindow(GtkWidget* aWindow)
> {
> ...
> #if defined(MOZ_ENABLE_STARTUP_NOTIFICATION)
>     // TODO - Implement for non-X11 Gtk backends (Bug 726479)
>     if (mIsX11Display) {

This is not nsWindow's method and cannot access mIsX11Display.

> void
> nsWindow::NativeShow(bool aAction)
> {
> ...
>                 SetUserTimeAndStartupIDForActivatedWindow(mShell);

mIsX11Display should be passed from here.
Keywords: regression
Priority: -- → P1
See Also: → 726479
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/d2c3da5ac021
use gdk_display_get_default() instead of mIsX11Display attribute, r=karlt
Keywords: checkin-needed
[Tracking Requested - why for this release]:
regression from bug 1215104, breaking compilation with common configuration.
https://hg.mozilla.org/mozilla-central/rev/d2c3da5ac021
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Martin, can you request an uplift to aurora?
Flags: needinfo?(stransky)
Comment on attachment 8776498 [details] [diff] [review]
patch

Approval Request Comment
[Feature/regressing bug #]: #1215104
[User impact if declined]: Fails to build when start-up notification is enabled
[Describe test coverage new/current, TreeHerder]: no test, we don't build with enabled start-up notification
[Risks and why]: No risk at all
[String/UUID change made/needed]: None
Flags: needinfo?(stransky)
Attachment #8776498 - Flags: approval-mozilla-aurora?
Comment on attachment 8776498 [details] [diff] [review]
patch

Fixes a regression, Aurora50+
Attachment #8776498 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: