Bug 1286482 - use gdk_display_get_default() instead of mIsX11Display attribute. r=karlt, a=ritu